--- a/pages/add-lot.html
+++ b/pages/add-lot.html
@@ -60,7 +60,7 @@
     <form class="form form--add-lot container form--invalid" action="https://echo.htmlacademy.ru" method="post"> <!-- form--invalid -->
       <h2>Добавление лота</h2>
       <div class="form__container-two">
-        <div class="form__item form__item--invalid"> <!-- form__item--invalid -->
+        <div class="form__item form__item--invalid">
           <label for="lot-name">Наименование</label>
           <input id="lot-name" type="text" name="lot-name" placeholder="Введите наименование лота" required>
           <span class="form__error">Введите наименование лота</span>
