--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -57,9 +57,9 @@
         </li>
       </ul>
     </nav>
-    <form class="form container" action="https://echo.htmlacademy.ru" method="post"> <!-- form--invalid -->
+    <form class="form container" action="https://echo.htmlacademy.ru" method="post">
       <h2>Регистрация нового аккаунта</h2>
-      <div class="form__item"> <!-- form__item--invalid -->
+      <div class="form__item">
         <label for="email">E-mail*</label>
         <input id="email" type="text" name="email" placeholder="Введите e-mail" required>
         <span class="form__error">Введите e-mail</span>
